--- a/kr/index.html
+++ b/kr/index.html
@@ -19,52 +19,52 @@ language: kr
         <!-- Main content -->
         <div class="main-content">
             <div class="menu-cards">
-                <div class="menu-card" onclick="location.href='./character/?v=' + APP_VERSION">
-                    <div class="card-content">
+                <div class="menu-card">
+                    <a href="./character/?v=' + APP_VERSION" class="card-content" style="text-decoration: none; color: inherit;">
                         <div class="text-section">
                             <h2>괴도 <img src="{{ site.baseurl }}/assets/img/home/icon1.png" alt="괴도 아이콘" class="title-icon"></h2>
                             <p class="desktop-description">보다 높은 점수, 보다 쉬운 클리어를 위한<br>괴도별 육성 전략을 만나보세요</p>
                             <p class="mobile-description">괴도별 육성 전략을 만나보세요</p>
-                            <button onclick="location.href='./character/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
+                            <button class="view-more">바로가기 →</button>
                         </div>
                         <img src="{{ site.baseurl }}/assets/img/home/1.webp" alt="괴도 일러스트" class="card-illustration" loading="lazy">
-                    </div>
+                    </a>
                 </div>
                 
-                <div class="menu-card" onclick="location.href='./persona/?v=' + APP_VERSION">
-                    <div class="card-content">
+                <div class="menu-card">
+                    <a href="./persona/?v=' + APP_VERSION" class="card-content" style="text-decoration: none; color: inherit;">
                         <div class="text-section">
                             <h2>페르소나 <img src="{{ site.baseurl }}/assets/img/home/icon2.png" alt="페르소나 아이콘" class="title-icon"></h2>
                             <p class="desktop-description">핵심 페르소나 추천과 더불어<br>각 페르소나에 어울리는 스킬 세팅까지</p>
                             <p class="mobile-description">핵심 페르소나 추천과 스킬 세팅까지</p>
-                            <button onclick="location.href='./persona/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
+                            <button class="view-more">바로가기 →</button>
                         </div>
                         <img src="{{ site.baseurl }}/assets/img/home/2.webp" alt="페르소나 일러스트" class="card-illustration" loading="lazy">
-                    </div>
+                    </a>
                 </div>
 
-                <div class="menu-card" onclick="location.href='./revelations/?v=' + APP_VERSION">
-                    <div class="card-content">
+                <div class="menu-card">
+                    <a href="./revelations/?v=' + APP_VERSION" class="card-content" style="text-decoration: none; color: inherit;">
                         <div class="text-section">
                             <h2>계시 <img src="{{ site.baseurl }}/assets/img/home/icon3.png" alt="계시 아이콘" class="title-icon"></h2>
                             <p class="desktop-description">계시 정보들을 한 눈에!<br>속성별, 일월성진별 원하는 대로 매칭</p>
                             <p class="mobile-description">계시 정보들을 한 눈에!</p>
-                            <button onclick="location.href='./revelations/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
+                            <button class="view-more">바로가기 →</button>
                         </div>
                         <img src="{{ site.baseurl }}/assets/img/home/3.webp" alt="계시 일러스트" class="card-illustration" loading="lazy">
-                    </div>
+                    </a>
                 </div>
 
-                <div class="menu-card" onclick="location.href='./tactic/tactic-share.html?v=' + APP_VERSION">
-                    <div class="card-content">
+                <div class="menu-card">
+                    <a href="./tactic/tactic-share.html?v=' + APP_VERSION" class="card-content" style="text-decoration: none; color: inherit;">
                         <div class="text-section">
                             <h2>택틱 <img src="{{ site.baseurl }}/assets/img/home/icon4.png" alt="택틱 아이콘" class="title-icon"></h2>
                             <p class="desktop-description">본인만의 택틱을 만들고 공유하고,<br>바다와 흉몽에서 높은 점수를 쟁취하세요</p>
                             <p class="mobile-description">본인만의 택틱을 만들고 공유하세요</p>
-                            <button onclick="location.href='./tactic/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
+                            <button class="view-more">바로가기 →</button>
                         </div>
                         <img src="{{ site.baseurl }}/assets/img/home/4.webp" alt="택틱 일러스트" class="card-illustration" loading="lazy">
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="update-notice">
@@ -77,27 +77,27 @@ language: kr
                 <h2>인기 괴도</h2>
                 <div class="character-cards">
                     <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/마나카.webp" alt="마나카" onclick="location.href='./character/character.html?name=마나카&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><a href="./character/character.html?name=마나카&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/마나카.webp" alt="마나카"></a></div>
                         <div class="character-card-text"><p>나가오 마나카</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/이케나미.webp" alt="이케나미" onclick="location.href='./character/character.html?name=이케나미&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><a href="./character/character.html?name=이케나미&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/이케나미.webp" alt="이케나미"></a></div>
                         <div class="character-card-text"><p>이케나미 쇼키</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/마유미.webp" alt="마유미" onclick="location.href='./character/character.html?name=마유미&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><a href="./character/character.html?name=마유미&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/마유미.webp" alt="마유미"></a></div>
                         <div class="character-card-text"><p>하시모토 마유미</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/아케치.webp" alt="아케치" onclick="location.href='./character/character.html?name=아케치&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><a href="./character/character.html?name=아케치&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/아케치.webp" alt="아케치"></a></div>
                         <div class="character-card-text"><p>아케치 고로</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/미오.webp" alt="미오" onclick="location.href='./character/character.html?name=미오&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><a href="./character/character.html?name=미오&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미오.webp" alt="미오"></a></div>
                         <div class="character-card-text"><p>나츠카와 미오</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무" onclick="location.href='./character/character.html?name=야오링·사자무&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><a href="./character/character.html?name=야오링·사자무&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무"></a></div>
                         <div class="character-card-text"><p>리 야오링·사자무</p></div>
                     </div>
                 </div>
@@ -117,10 +117,10 @@ language: kr
                         <h3>도시 생활</h3>
                     </div>
                     <div class="guide-card-content">
-                        <div class="article" onclick="window.open('https://docs.google.com/spreadsheets/d/1L47W0r5nHpAlU_qUY3HuslcqBRS78tHC682eFCXiftM', '_blank')">∘ 협력자 선물 & 선택지</div>
-                        <div class="article" onclick="window.open('https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=158597', '_blank')">∘ 협력자 우선순위 추천</div>
-                        <div class="article" onclick="window.open('https://arca.live/b/persona5x/112002828', '_blank')">∘ 이치가야 낚시</div>
-                        <div class="article" onclick="window.open('https://arca.live/b/persona5x/110240842', '_blank')">∘ 요리 레시피 획득</div>
+                        <div class="article"><a href="https://docs.google.com/spreadsheets/d/1L47W0r5nHpAlU_qUY3HuslcqBRS78tHC682eFCXiftM" target="_blank" style="text-decoration: none; color: inherit;">∘ 협력자 선물 & 선택지</a></div>
+                        <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=158597" target="_blank" style="text-decoration: none; color: inherit;">∘ 협력자 우선순위 추천</a></div>
+                        <div class="article"><a href="https://arca.live/b/persona5x/112002828" target="_blank" style="text-decoration: none; color: inherit;">∘ 이치가야 낚시</a></div>
+                        <div class="article"><a href="https://arca.live/b/persona5x/110240842" target="_blank" style="text-decoration: none; color: inherit;">∘ 요리 레시피 획득</a></div>
                     </div>
                 </div>
                 <div class="guide-card">
@@ -129,10 +129,10 @@ language: kr
                         <h3>육성 및 재화</h3>
                     </div>
                     <div class="guide-card-content">
-                        <div class="article" onclick="window.open('https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=170601', '_blank')">∘ 계시에 대하여</div>
-                        <div class="article" onclick="window.open('https://arca.live/b/persona5x/115843217', '_blank')">∘ 주 성위 계시 입수처</div>
-                        <div class="article" onclick="window.open('https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=175353', '_blank')">∘ 교환상점 구매목록</div>
-                        <div class="article" onclick="window.open('https://docs.google.com/spreadsheets/d/1PotwjpI7fPORdSZ3PfSnbIffbLkvxVXZRpFzGfsuY1w', '_blank')">∘ 패키지 과금효율 계산</div>
+                        <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=170601" target="_blank" style="text-decoration: none; color: inherit;">∘ 계시에 대하여</a></div>
+                        <div class="article"><a href="https://arca.live/b/persona5x/115843217" target="_blank" style="text-decoration: none; color: inherit;">∘ 주 성위 계시 입수처</a></div>
+                        <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=175353" target="_blank" style="text-decoration: none; color: inherit;">∘ 교환상점 구매목록</a></div>
+                        <div class="article"><a href="https://docs.google.com/spreadsheets/d/1PotwjpI7fPORdSZ3PfSnbIffbLkvxVXZRpFzGfsuY1w" target="_blank" style="text-decoration: none; color: inherit;">∘ 패키지 과금효율 계산</a></div>
                     </div>
                 </div>
                 <div class="guide-card">
@@ -141,11 +141,11 @@ language: kr
                         <h3>전투 및 팰리스</h3>
                     </div>
                     <div class="guide-card-content">
-                        <div class="article" onclick="window.open('https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=163337', '_blank')">∘ 대미지 계산식</div>
-                        <div class="article" onclick="window.open('https://www.bilibili.com/video/BV1xF4m1N7bZ', '_blank')">∘ 팰리스 1장 100% 탐색도</div>
-                        <div class="article" onclick="window.open('https://www.bilibili.com/video/BV1zD421n7jJ', '_blank')">∘ 팰리스 2장 100% 탐색도</div>
-                        <div class="article" onclick="window.open('https://www.bilibili.com/video/BV1kr421T7Wp', '_blank')">∘ 팰리스 3장 100% 탐색도</div>
-                        <div class="article" onclick="window.open('https://www.bilibili.com/video/BV1duUSYfEdY', '_blank')">∘ 팰리스 4장 100% 탐색도</div>
+                        <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=163337" target="_blank" style="text-decoration: none; color: inherit;">∘ 대미지 계산식</a></div>
+                        <div class="article"><a href="https://www.bilibili.com/video/BV1xF4m1N7bZ" target="_blank" style="text-decoration: none; color: inherit;">∘ 팰리스 1장 100% 탐색도</a></div>
+                        <div class="article"><a href="https://www.bilibili.com/video/BV1zD421n7jJ" target="_blank" style="text-decoration: none; color: inherit;">∘ 팰리스 2장 100% 탐색도</a></div>
+                        <div class="article"><a href="https://www.bilibili.com/video/BV1kr421T7Wp" target="_blank" style="text-decoration: none; color: inherit;">∘ 팰리스 3장 100% 탐색도</a></div>
+                        <div class="article"><a href="https://www.bilibili.com/video/BV1duUSYfEdY" target="_blank" style="text-decoration: none; color: inherit;">∘ 팰리스 4장 100% 탐색도</a></div>
                     </div>
                 </div>
             </div>
@@ -153,8 +153,8 @@ language: kr
 
         <div class="posts-container">
             <div class="posts-header">
-                <h2><a href="./tactic/tactic-share.html">택틱 대장간 NEW</a></h2>
-                <a href="./tactic/tactic-share.html" class="show-more-posts-btn">더보기 ＋</a>
+                <h2><a href="./tactic/tactic-share.html" style="text-decoration: none; color: inherit;">택틱 대장간 NEW</a></h2>
+                <a href="./tactic/tactic-share.html" class="show-more-posts-btn" style="text-decoration: none; color: inherit;">더보기 ＋</a>
             </div>
             <div class="posts-list" id="postsList"></div>
         </div>
