--- a/kr/persona/index.html
+++ b/kr/persona/index.html
@@ -234,7 +234,7 @@ description: 페르소나5 더 팬텀 X의 주요 페르소나 정보
             <div class="explain-section">
                 <h4>본능 · 고유 스킬 · HIGHLIGHT</h4>
                 <div class="priority-examples">
-                    <div class="priority-label">중요순위 :</div>
+                    <div class="priority-label">중요도 :</div>
                     <div class="priority-item">
                         <div class="priority-box high"></div>
                         <span>상</span>
