--- a/kr/index.html
+++ b/kr/index.html
@@ -141,7 +141,7 @@ language: kr
                         <h3>전투 및 팰리스</h3>
                     </div>
                     <div class="guide-card-content">
-                        <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=163337" target="_blank" style="text-decoration: none; color: inherit;">∘ 대미지 계산식</a></div>
+                        <!-- <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=163337" target="_blank" style="text-decoration: none; color: inherit;">∘ 대미지 계산식</a></div> -->
                         <div class="article"><a href="https://www.bilibili.com/video/BV1xF4m1N7bZ" target="_blank" style="text-decoration: none; color: inherit;">∘ 팰리스 1장 100% 탐색도</a></div>
                         <div class="article"><a href="https://www.bilibili.com/video/BV1zD421n7jJ" target="_blank" style="text-decoration: none; color: inherit;">∘ 팰리스 2장 100% 탐색도</a></div>
                         <div class="article"><a href="https://www.bilibili.com/video/BV1kr421T7Wp" target="_blank" style="text-decoration: none; color: inherit;">∘ 팰리스 3장 100% 탐색도</a></div>
