--- a/kr/character/character.html
+++ b/kr/character/character.html
@@ -38,6 +38,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 </div>
                 <div class="sub-info">
                     <p class="code-name">코드네임: </p>
+                    <p class="sees" style="font-weight: bold; display: none;">S.E.E.S</p>
                     <p class="persona-name">페르소나: </p>
                 </div>
             </div>
