--- a/kr/character/character.html
+++ b/kr/character/character.html
@@ -203,7 +203,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                             <span class="value"></span>
                         </div>
                         <div class="skill-level">
-                            <span class="label">하이라이트</span>
+                            <span class="label" data-text="highlight">하이라이트</span>
                             <span class="value"></span>
                         </div>
                     </div>
