--- a/kr/buff-calc/index.html
+++ b/kr/buff-calc/index.html
@@ -63,9 +63,14 @@ description: 페르소나5 더 팬텀 X 버프 계산기
                     <div class="stat-value" id="mainPenetrate">0%</div>
                 </div>
                 <div class="stat-item">
+                    <div class="stat-label">스킬 마스터</div>
+                    <div class="stat-value" id="mainSkillMaster">0</div>
+                </div>
+                <div class="stat-item">
                     <div class="stat-label">독립 배수</div>
                     <div class="stat-value" id="mainIndependentMultiplier">0%</div>
                 </div>
+ 
             </div>
         </div>
         <div class="card-style target-section">
@@ -100,9 +105,14 @@ description: 페르소나5 더 팬텀 X 버프 계산기
                     <div class="stat-value" id="allyPenetrate">0%</div>
                 </div>
                 <div class="stat-item">
+                    <div class="stat-label">스킬 마스터</div>
+                    <div class="stat-value" id="allySkillMaster">0</div>
+                </div>
+                <div class="stat-item">
                     <div class="stat-label">독립 배수</div>
                     <div class="stat-value" id="allyIndependentMultiplier">0%</div>
                 </div>
+
             </div>
         </div>
     </div>
