--- a/kr/buff-calc/index.html
+++ b/kr/buff-calc/index.html
@@ -11,7 +11,7 @@ description: 페르소나5 더 팬텀 X 버프 계산기
 
 <head>
     <link rel="stylesheet" href="../../assets/css/lock.css">
-    <!-- <script src="../../assets/js/lock.js"></script> -->
+    <script src="../../assets/js/lock.js"></script>
     <script src="../../assets/js/calc/buff-data.js"></script>
     <script src="../../data/kr/calc/buff-data-ritual.js"></script>
     <script src="../../assets/js/buff-calc.js"></script>
