--- a/kr/index.html
+++ b/kr/index.html
@@ -77,6 +77,10 @@ language: kr
                 <h2>인기 괴도</h2>
                 <div class="character-cards">
                     <div class="character-card">
+                        <div class="character-card-img"><a href="./character/character.html?name=유키 마코토&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/유키 마코토.webp" alt="유키 마코토"></a></div>
+                        <div class="character-card-text"><p>유키 마코토</p></div>
+                    </div>
+                    <div class="character-card">
                         <div class="character-card-img"><a href="./character/character.html?name=마나카&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/마나카.webp" alt="마나카"></a></div>
                         <div class="character-card-text"><p>나가오 마나카</p></div>
                     </div>
@@ -95,10 +99,6 @@ language: kr
                     <div class="character-card">
                         <div class="character-card-img"><a href="./character/character.html?name=미오&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미오.webp" alt="미오"></a></div>
                         <div class="character-card-text"><p>나츠카와 미오</p></div>
-                    </div>
-                    <div class="character-card">
-                        <div class="character-card-img"><a href="./character/character.html?name=야오링·사자무&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무"></a></div>
-                        <div class="character-card-text"><p>리 야오링·사자무</p></div>
                     </div>
                 </div>
             </div>
