--- a/kr/buff-calc/index.html
+++ b/kr/buff-calc/index.html
@@ -5,7 +5,7 @@ custom_js: [tooltip]
 custom_data: [tooltip.js]
 permalink: /kr/buff-calc/
 language: kr
-title : 버프 계산기 - 페르소나5 더 팬텀 X 루페르넷
+title : 허수아비 - 페르소나5 더 팬텀 X 루페르넷
 description: 페르소나5 더 팬텀 X 버프 계산기
 ---
 
@@ -27,7 +27,7 @@ description: 페르소나5 더 팬텀 X 버프 계산기
         <span class="current-page">버프 계산</span>
     </div>
     <div class="header-container">
-        <h1>버프 계산기</h1>
+        <h1>허수아비</h1>
     </div>
     
     <!-- top card container -->
