--- a/kr/defense-calc/index.html
+++ b/kr/defense-calc/index.html
@@ -59,7 +59,7 @@ description: 페르소나5 더 팬텀 X 방어력 감소 계산기
         
         <!-- final damage increase card -->
         <div class="damage-card card-style">
-            <h2>최종 대미지 증가 <span class="tooltip-icon" data-tooltip="대미지 배수 : 1 - [방어력 × 방어 계수 / (방어력+1400) × 방어 계수]">?</span></h2>
+            <h2>최종 대미지 증가 <span class="tooltip-icon" data-tooltip="대미지 배수 : 1 - [방어력 × 방어 계수 / (방어력× 방어 계수 + 1400)]">?</span></h2>
             <div class="damage-increase"></div>
             <div class="damage-formula">
                 <div class="formula-row">· 기본 최종 대미지 배수: <span id="noDefReduce">-</span></div>
