--- a/kr/index.html
+++ b/kr/index.html
@@ -132,7 +132,7 @@ language: kr
                         <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=170601" target="_blank" style="text-decoration: none; color: inherit;">∘ 계시에 대하여</a></div>
                         <div class="article"><a href="https://arca.live/b/persona5x/115843217" target="_blank" style="text-decoration: none; color: inherit;">∘ 주 성위 계시 입수처</a></div>
                         <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=175353" target="_blank" style="text-decoration: none; color: inherit;">∘ 교환상점 구매목록</a></div>
-                        <div class="article"><a href="https://docs.google.com/spreadsheets/d/1PotwjpI7fPORdSZ3PfSnbIffbLkvxVXZRpFzGfsuY1w" target="_blank" style="text-decoration: none; color: inherit;">∘ 패키지 과금효율 계산</a></div>
+                        <div class="article"><a href="https://lufel.net/kr/pay-calc" target="_blank" style="text-decoration: none; color: inherit;">∘ 패키지 과금효율 계산</a></div>
                     </div>
                 </div>
                 <div class="guide-card">
@@ -158,25 +158,7 @@ language: kr
             </div>
             <div class="posts-list" id="postsList"></div>
         </div>
-        <div class="footer-container">
-            <div class="footer-text">
-                <p>※ 루페르넷은 개인이 만든 비공식 페르소나5X 정보 제공 사이트로 게임의 콘텐츠와 소재의 트레이드마크와 저작권은 SEGA·ATLUS·Perfect World Games에 있습니다.</p>
-                <p>✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@루트　<a href="https://forms.gle/Z5SgtSNpSvnprJxAA" style="color: rgb(255, 255, 255, 0.5); text-decoration: underline;" target="_blank">제보 및 요청</a></p>
-                <p></p>
-            </div>
-            
-            <!-- 반응형 일반 -->
-                <!--
-            <ins class="adsbygoogle"
-                    style="display:block"
-                    data-ad-client="ca-pub-5862324369257695"
-                    data-ad-slot="1387076195"
-                    data-ad-format="auto"
-                    data-full-width-responsive="true"></ins>
-            <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>-->
-        </div>
+
     </div>
     
 </div>
