--- a/kr/character/index.html
+++ b/kr/character/index.html
@@ -488,6 +488,7 @@ description: 페르소나5 더 팬텀 X의 괴도별 육성 가이드
             '풍리코' : '타네무라 리코·매화',
             '풍타뉴' : '코토네 몽타뉴·백조',
             '백타뉴' : '코토네 몽타뉴·백조',
+            '3주' : '유키 마코토'
         }
 
         searchInput.addEventListener('input', (e) => {
