--- a/kr/about/index.html
+++ b/kr/about/index.html
@@ -40,7 +40,7 @@ language: kr
         </div>
 
         <div class="about-section">
-            <button id="donateButton" class="donate-button">후원</button>
+            <button id="donateButton" class="donate-button">후원 | Donate</button>
         </div>
     </div>
 </div>
