--- a/kr/index.html
+++ b/kr/index.html
@@ -77,6 +77,10 @@ language: kr
                 <h2>인기 괴도</h2>
                 <div class="character-cards">
                     <div class="character-card">
+                        <div class="character-card-img"><a href="./character/character.html?name=유카리&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/유카리.webp" alt="유카리"></a></div>
+                        <div class="character-card-text"><p>타케바 유카리</p></div>
+                    </div>
+                    <div class="character-card">
                         <div class="character-card-img"><a href="./character/character.html?name=유키 마코토&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/유키 마코토.webp" alt="유키 마코토"></a></div>
                         <div class="character-card-text"><p>유키 마코토</p></div>
                     </div>
@@ -85,16 +89,12 @@ language: kr
                         <div class="character-card-text"><p>나가오 마나카</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><a href="./character/character.html?name=이케나미&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/이케나미.webp" alt="이케나미"></a></div>
-                        <div class="character-card-text"><p>이케나미 쇼키</p></div>
-                    </div>
-                    <div class="character-card">
                         <div class="character-card-img"><a href="./character/character.html?name=마유미&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/마유미.webp" alt="마유미"></a></div>
                         <div class="character-card-text"><p>하시모토 마유미</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><a href="./character/character.html?name=아케치&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/아케치.webp" alt="아케치"></a></div>
-                        <div class="character-card-text"><p>아케치 고로</p></div>
+                        <div class="character-card-img"><a href="./character/character.html?name=야오링·사자무&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무"></a></div>
+                        <div class="character-card-text"><p>야오링·사자무</p></div>
                     </div>
                     <div class="character-card">
                         <div class="character-card-img"><a href="./character/character.html?name=미오&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미오.webp" alt="미오"></a></div>
