--- a/kr/about/index.html
+++ b/kr/about/index.html
@@ -96,7 +96,7 @@ language: kr
 <div id="exchangeCodeModal" class="modal">
     <div class="modal-content">
         <span class="close-button">&times;</span>
-        <h3>KR 교환코드 (v4.1.2)</h3>
+        <h3>KR 교환코드 (v4.1.3)</h3>
         <p class="exchange-notice">
             한국 서버 크리에이터 프로그램을 통해 제공되는 교환코드입니다. 비정기적으로 업데이트 될 수 있습니다.
         </p>
@@ -111,35 +111,35 @@ language: kr
         Navigation.load('about');
         
         // 교환코드 목록 (새로운 코드로 업데이트하려면 이 문자열만 수정하면 됩니다)
-        const exchangeCodes = `99920876UEKJKUTQ
-87287024UFZYDEEM
-87252642UAJHUOTR
-52645282UBYQGGXJ
-45639718UDIMJRZY
-78305784ULXOFJCV
-73339081UNHDIVDP
-87628157UHQSKDRR
-04517306UJNBAHTX
-56177493UKPWWTGS
-77257634UVMGBQZI
-18040343UWOUOKGL
-17060902USLEWGCX
-75181474UTTJTZCR
-43836238UPCYMWLR
-63510013UQSHCGDJ
-73669895UYBQOZCU
-27028200UZRMOOWB
-63776232VFAOXMMO
-89862845VGWDFYYB
-32267785VBGSMIDZ
-66123677VCVBCKVH
-83208298VLFWIDDH
-56228038VMUGDSNI
-12533852VHEUXZEJ
-56004268VIKETBQC
-23643550VJZJFJUS
-82584775VUIYOWWY
-05866038VVYHBTSP`;
+        const exchangeCodes = `86316724UEKPMMVZ
+99276243UGELJUOF
+71942806UAJTYVRM
+04733255UBZCAIOY
+34148364UDIRKJZX
+03592649ULYAHIDA
+23281086UNHVKPOZ
+05503351UHXFGTDM
+06068001UJNKKNGR
+72358696UKPZLRLK
+32752264UVMIHWNG
+72875887UWOXJHAZ
+70555048USLNIQOJ
+19906595UTTPVXBP
+42319474UPDLMGQO
+00956783UQSTBWLH
+86595324UYCCXQFA
+19784764UZRRCOJK
+75021883VFBAMECT
+22548076VGWVGGJY
+39341565VBAFRNTL
+24256529VCVKSIPL
+84868262VLFZCPFY
+77870051VMUIYUYW
+46905222VHEXXZGI
+76493667VIKNQAOM
+55028303VJZPWMXB
+22411843VUJLKBBM
+64068715VVYTLDDZ`;
 
         // 교환코드 동적 생성 함수
         function generateExchangeCodes() {
